@@ -43,7 +43,7 @@ module Reek
       def examine_context(context)
         context.envious_receivers.each do |ref, occurs|
           target = SexpFormatter.format(ref)
-          found(context, "refers to #{target} more than self", '',
+          found(context, "refers to #{target} more than self", 'EnviousMethod',
             {'receiver' => target, 'references' => occurs})
           # TODO: report the lines
         end
