@@ -35,13 +35,23 @@ describe FeatureEnvy do
 
   context 'when an envious receiver exists' do
     before :each do
+      @source_name = 'green as a cucumber'
       @receiver = 'blah'
       @ctx = mock('method_context', :null_object => true)
       @ctx.should_receive(:envious_receivers).and_return({s(:lvar, @receiver) => 4})
-      @detector = FeatureEnvy.new
+      @detector = FeatureEnvy.new(@source_name)
       @detector.examine_context(@ctx)
       warning = @detector.smells_found.to_a[0]   # SMELL: too cumbersome!
       @yaml = warning.to_yaml
+    end
+    it 'reports the source' do
+      @yaml.should match(/source:\s*#{@source_name}/)
+    end
+    it 'reports the class' do
+      @yaml.should match(/class:\s*FeatureEnvy/)
+    end
+    it 'reports the subclass' do
+      @yaml.should match(/subclass:\s*EnviousMethod/)
     end
     it 'reports the envious receiver' do
       @yaml.should match(/receiver:[\s]*#{@receiver}/)
@@ -200,7 +210,8 @@ end
 
 describe FeatureEnvy do
   before(:each) do
-    @detector = FeatureEnvy.new
+    @source_name = 'green as a cucumber'
+    @detector = FeatureEnvy.new(@source_name)
   end
 
   it_should_behave_like 'SmellDetector'
@@ -221,6 +232,15 @@ EOS
       @detector.examine_context(@mctx)
       warning = @detector.smells_found.to_a[0]   # SMELL: too cumbersome!
       @yaml = warning.to_yaml
+    end
+    it 'reports the source' do
+      @yaml.should match(/source:\s*#{@source_name}/)
+    end
+    it 'reports the class' do
+      @yaml.should match(/class:\s*FeatureEnvy/)
+    end
+    it 'reports the subclass' do
+      @yaml.should match(/subclass:\s*EnviousMethod/)
     end
     it 'reports the envious receiver' do
       @yaml.should match(/receiver:\s*other/)
