@@ -1,8 +1,12 @@
 == 1.2.7 (in development)
 
+=== Major Changes
+* New option --yaml reports smells in YAML format
+
 === Minor Changes
 * New smell: Irresponsible Module (has no meaningful comment)
 * New smell: BooleanParameter (used to be part of ControlCouple)
+* ControlCouple no longer checks arguments yielded to blocks
 * NestedIterators now reports the nesting depth
 * Fixed problem checking for Utility Functions in Object
 * Improved detection of invalid config files
